<resources>
    <string name="facebook_app_id" translatable="false">1569409960050648</string>

    <string name="app_name">FiapFood</string>
    <string name="welcome">Welcome</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="sign_in">Sign in</string>
    <string name="login_invalid">Name or password invalid, try again</string>

    <string name="login_canceled">Login attempt canceled.</string>
    <string name="login_failed">Login attempt failed.</string>
    <string name="title_activity_main_list">Restaurant List</string>
    <string name="title_activity_restaurant_add">Add Restaurant</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="delivery">delivery</string>
    <string name="fast_food">fast food</string>
    <string name="rodizio">rodízio</string>
    <string name="price">Price $</string>
    <string name="decimal">.00</string>
    <string name="observation">Observation</string>
    <string name="other">other</string>
    <string name="name_hint">Name (admin)</string>
    <string name="password_hint">Password (admin)</string>
    <string name="title_activity_maps">Map</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_restaurant_edit">Restaurant Edit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="app_version">v0.1</string>
    <string name="app_developer">Francisco Kahil</string>
    <string name="app_developer_rm">RM 40127</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="see_all">See all</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="any">Any</string>
    <string name="title_activity_results">Results</string>
    <string name="signedin">Signed in successfully, enjoy!</string>
    <string name="edit_location">Edit Location</string>
    <string name="title_activity_edit_location_maps">Edit Location</string>
    <string name="cancel">Cancel</string>
    <string name="fiap_url">https://www.fiap.com.br/</string>
    <string name="min">Min</string>
    <string name="hint_value">00</string>
    <string name="max">Max</string>
    <string name="restaurant_img">Restaurant image</string>
    <string name="marker_img">Restaurant position marker</string>
    <string name="logo">App logo</string>
    <string name="error_message">An error occurred, please try again.</string>
    <string name="empty_name_validation">Please give a name</string>
    <string name="no_results">No results found</string>
    <string name="currency">$</string>
</resources>
