<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    >


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tlPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_rodizio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rodizio"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_fast_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_food"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_undefined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undefined"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tlPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Price $"
            android:inputType="phone"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btAddStuff"
        />


</LinearLayout>
</android.android"
   idget.NestedScrollView>